[package]
name = "genpi"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
axum = "0.7.1"
clap = { version = "4.3.17", features = ["derive"] }
hyper = { version = "1.0.1", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
scraper = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
time = { version = "0.3.23", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
http-body-util = "0.1.0"
temp-env = "0.3.4"
tower = { version = "0.4.13", features = ["util"] }
