[package]
name = "genpi"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
hyper = { version = "1.0.1", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
] }
scraper = "0.18.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
time = { version = "0.3.23", features = [
  "formatting",
  "macros",
  "parsing",
  "rand",
  "serde",
] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
temp-env = "0.3.4"
tower = { version = "0.4.13", features = ["util"] }
