[package]
name = "genpi"
version = "0.4.9"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
hyper = { version = "1.1.0", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = [
  "rustls-tls",
] }
scraper = "0.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
time = { version = "0.3.31", features = [
  "formatting",
  "macros",
  "parsing",
  "rand",
  "serde",
] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
temp-env = "0.3.4"
tower = { version = "0.4.13", features = ["util"] }
